Correção de detalhes/aplicação das imagens adicionadas anteriormente

--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -44,7 +44,7 @@
 
         .tamanhoImgNav {
             height: 55px;
-            width: 55px;
+            width: 85px;
         }
 
         .crPadding {
@@ -59,7 +59,7 @@
     <nav class="navbar navbar-expand-lg bg-primary mb-3">
         <div class="container-fluid">
             <figure>
-                <img src="Imagens/Icon_MangaPedia.png" class="tamanhoImgNav rounded-3">
+                <img src="Imagens/MangaPedia_Navbar.png" class="tamanhoImgNav rounded-4 mt-3">
             </figure>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -69,7 +69,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item rounded-3 mx-3 navButtons">
-                        <a class="nav-link active" aria-current="page" href="Index_mangapedia.html">
+                        <a class="nav-link disabled" aria-current="page" href="Index_mangapedia.html">
                             Home
                         </a>
                     </li>
