--- a/romance.html
+++ b/romance.html
@@ -54,6 +54,11 @@
             width: 250px;
         }
 
+        .tamanhoImgNav {
+            height: 55px;
+            width: 85px;
+        }
+
         .lgPadding {
             padding-bottom: 1%;
         }
@@ -74,6 +79,9 @@
     <!--Início navbar-->
     <nav class="navbar navbar-expand-lg bg-primary mb-3">
         <div class="container-fluid">
+            <figure>
+                <img src="Imagens/MangaPedia_Navbar.png" class="tamanhoImgNav rounded-4 mt-3">
+            </figure>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
