index ajeitado, pagination no romance

--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -226,7 +226,7 @@
             </div>
 
             <div class="col-md-3 col-sm-12 card border-light m-3 rounded-4">
-                <a href="acao.html#snw" class="text-center p-1">
+                <a href="acao2.html#snw" class="text-center p-1">
                     <img src="Imagens/acao/snw.jpg" class="tamanhoImg card-img">
                 </a>
                 <div class="card-body">
@@ -244,7 +244,7 @@
             </div>
 
             <div class="col-md-3 col-sm-12 card border-light m-3 rounded-4">
-                <a href="acao.html#opm" class="text-center p-1">
+                <a href="acao2.html#opm" class="text-center p-1">
                     <img src="Imagens/acao/opm.jpg" class="tamanhoImg card-img">
                 </a>
                 <div class="card-body">
@@ -342,7 +342,7 @@
                 </div>
             </div>
             <div class="col-md-3 col-sm-12 card border-light m-3 rounded-4">
-                <a href="romance.html#uc" class="text-center p-1">
+                <a href="romance2.html#uc" class="text-center p-1">
                     <img src="Imagens/romance/uc.jpg" class="tamanhoImg card-img">
                 </a>
                 <div class="card-body">
