--- a/romance.html
+++ b/romance.html
@@ -150,6 +150,7 @@
                     <div class="accordion-body">
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item"><a href="#ahr">Ao Haru Ride</a></li>
+                            <li class="list-group-item"><a href="#fb">Fruits Basket</a></li>
                             <li class="list-group-item"><a href="#gotobun">Go-Tōbun no Hanayome</a></li>
                             <li class="list-group-item"><a href="#horimiya">Horimiya</a></li>
                             <li class="list-group-item"><a href="#ks">Kaguyas-Sama</a></li>
@@ -157,8 +158,11 @@
                             <li class="list-group-item"><a href="#kcc">Komi-San</a></li>
                             <li class="list-group-item"><a href="#na">Nagatoro</a></li>
                             <li class="list-group-item"><a href="#no">Noragami</a></li>
-                            <li class="list-group-item"><a href="#uc">Uzaki-Chan</a></li>
-                            <li class="list-group-item"><a href="#w">Wotakoi</a></li>
+                            <li class="list-group-item"><a href="#o">Orange</a></li>
+                            <li class="list-group-item"><a href="romance2.html#rz">Re: zero</a></li>
+                            <li class="list-group-item"><a href="romance2.html#uc">Uzaki-Chan</a></li>
+                            <li class="list-group-item"><a href="romance2.html#w">Wotakoi</a></li>
+                            <li class="list-group-item"><a href="romance2.html#ylia">Your lie in April</a></li>
                         </ul>
                     </div>
                 </div>
@@ -182,10 +186,10 @@
 
         <div class="row">
             <div class="col-sm-12 col-md-4  mgImg">
-                <img src="Imagens/romance/ahr.jpg" class="tamanhoImg" alt="Berserk">
+                <img src="Imagens/romance/ahr.jpg" class="tamanhoImg" alt="Ao Haru Ride">
             </div>
             <div class="col-md-6 scrollpsy-example" data-bs-spy="scroll" data-bs-target="#list-example"
-                data-bs-smooth-scroll="true" tabindex="0" id="ahr">
+                data-bs-smooth-scroll="true" id="ahr">
                 <h4 class="text-left">Ao Haru Ride</h4><br>
                 <h6>54 Capitulos</h6><br>
                 <p>Yoshioka Futaba tem algumas razões pelas quais ela quer “reiniciar” sua imagem e vida como estudante
@@ -206,7 +210,23 @@
         </div>
         <div class="row">
             <div class="col-sm-12 col-md-4  mgImg">
-                <img src="Imagens/romance/gotobun.jpg" class="tamanhoImg" alt="Berserk">
+                <img src="Imagens/romance/fb.jpg" class="tamanhoImg" alt="Fruits Basket">
+            </div>
+            <div class="col-md-6" id="fb">
+                <h4 class="text-left">Fruits Basked</h4><br>
+                <h6>137 Capitulos</h6><br>
+                <p>Tohru é uma estudante normal que perdeu a mãe recentemente e por seu avô ainda estar se estabilizando, ele não pode cuidar dela, então Tohru decide morar sozinha em uma tenda dentro da mata sem dizer para ninguém, para não preocupa-los. Ao ir para a escola numa manhã qualquer ela descobre que é vizinha de um colega da sua escola que é chamado de “Príncipe” e que ele mora junto com mais dois rapazes. Mas, quando ocorre um desmoronamento na floresta e sua “casa” acaba por ficar soterrada, ela é chamada para viver nessa casa cheia de homens e acaba por descobrir seu segredo.
+                </p>
+                <div class="alert alert-warning configAlert" role="alert">
+                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
+                </div>
+                <p>Onde ler: MangáLivre</p>
+            </div>
+            <hr class="linha">
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-md-4  mgImg">
+                <img src="Imagens/romance/gotobun.jpg" class="tamanhoImg" alt="Go-Tōbun no Hanayome">
             </div>
             <div class="col-md-6" id="gotobun">
                 <h4 class="text-left">Go-Tōbun no Hanayome</h4><br>
@@ -225,7 +245,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12 col-md-4  mgImg">
-                <img src="Imagens/romance/horimiya.jpg" class="tamanhoImg" alt="Berserk">
+                <img src="Imagens/romance/horimiya.jpg" class="tamanhoImg" alt="Horimiya">
             </div>
             <div class="col-md-6" id="horimiya">
                 <h4 class="text-left">Horimiya</h4><br>
@@ -245,7 +265,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12 col-md-4  mgImg">
-                <img src="Imagens/romance/ks.jpg" class="tamanhoImg" alt="Berserk">
+                <img src="Imagens/romance/ks.jpg" class="tamanhoImg" alt="Kaguya-Sama">
             </div>
             <div class="col-md-6" id="ks">
                 <h4 class="text-left">Kaguya-Sama</h4><br>
@@ -265,7 +285,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12 col-md-4  mgImg">
-                <img src="Imagens/romance/ko.jpg" class="tamanhoImg" alt="Berserk">
+                <img src="Imagens/romance/ko.jpg" class="tamanhoImg" alt="Kanojo, Okarishimasu">
             </div>
             <div class="col-md-6" id="ko">
                 <h4 class="text-left">Kanojo, Okarishimasu</h4><br>
@@ -283,7 +303,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12 col-md-4  mgImg">
-                <img src="Imagens/romance/kcc.jpg" class="tamanhoImg" alt="Berserk">
+                <img src="Imagens/romance/kcc.jpg" class="tamanhoImg" alt="Komi-San">
             </div>
             <div class="col-md-6" id="kcc">
                 <h4 class="text-left">Komi-San</h4><br>
@@ -302,7 +322,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12 col-md-4  mgImg">
-                <img src="Imagens/romance/na.jpg" class="tamanhoImg" alt="Berserk">
+                <img src="Imagens/romance/na.jpg" class="tamanhoImg" alt="Nagatoro">
             </div>
             <div class="col-md-6" id="na">
                 <h4 class="text-left">Nagatoro</h4><br>
@@ -320,12 +340,12 @@
         </div>
         <div class="row">
             <div class="col-sm-12 col-md-4  mgImg">
-                <img src="Imagens/romance/no.jpg" class="tamanhoImg" alt="Berserk">
+                <img src="Imagens/romance/no.jpg" class="tamanhoImg" alt="Noragami">
             </div>
             <div class="col-md-6" id="no">
-                <h4 class="text-left">Noragami</h4><br>
-                <h6>139 Capitulos</h6><br>
-                <p>Yato é um deus menor, cujo sonho é ter um monte de seguidores adorá-lo e orar com ele. Infelizmente,
+                <h4 class="text-left">Noragami<br>
+                    <h6>139 Capitulos</h6><br>
+                    <p>Yato é um deus menor, cujo sonho é ter um monte de seguidores adorá-lo e orar com ele. Infelizmente,
                     o seu sonho está longe de se tornar realidade desde que ele não tem sequer um único santuário
                     dedicado a ele. Para piorar as coisas, o único parceiro que tinha que o ajudava a resolver os
                     problemas das pessoas, tinha acabado de sair do trabalho. Sua existência divina e a sorte só pode
@@ -333,23 +353,6 @@
                     situação para que ela está presa com ele até que seu problema é resolvido. Juntamente com Hiyori e
                     sua nova Yukine parceiro de armas, Yato vai fazer tudo que puder para ganhar fama, reconhecimento e
                     apenas talvez, um santuário dedicado a ele, também...
-                </p>
-                <div class="alert alert-warning configAlert" role="alert">
-                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
-                </div>
-                <p>Onde ler: MangáLivre</p>
-            </div>
-            <hr class="linha">
-        </div>
-        <div class="row">
-            <div class="col-sm-12 col-md-4  mgImg">
-                <img src="Imagens/romance/uc.jpg" class="tamanhoImg" alt="Berserk">
-            </div>
-            <div class="col-md-6" id="uc">
-                <h4 class="text-left">Uzaki-Chan<br>
-                    <h6>125 Capitulos</h6><br>
-                    <p>A vida diária de um quieto universitário que só quer ficar sozinho, que começou a ser zombado
-                        pela sua Kouhai "Fofa! Mas irritante!"
                     </p>
                     <div class="alert alert-warning configAlert" role="alert">
                     <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
@@ -360,24 +363,36 @@
         </div>
         <div class="row">
             <div class="col-sm-12 col-md-4  mgImg">
-                <img src="Imagens/romance/w.jpg" class="tamanhoImg" alt="Berserk">
+                <img src="Imagens/romance/o.jpg" class="tamanhoImg" alt="Orange">
             </div>
-            <div class="col-md-6" id="w">
-                <h4 class="text-left">Wotakoi</h4><br>
-                <h6>111 Capitulos</h6><br>
-                <p>Poderiam um cara que em segredo é viciado em jogos e uma mulher que em segredo é uma fujoshi
-                    namorarem sem que seus hobbies atrapalhem? Narumi Momose foi abandonada por ex-namorados sempre que
-                    eles descobriam que ela é uma otaku, e quando ela descobre que seu amigo de infância e também otaku,
-                    Hirotaka Nifuji, trabalha na mesma empresa que ela, ela vê seu segredo ameaçado. Assim, ela traça um
-                    plano para manter as aparências, mas Hirotaka apenas faz uma contra-proposta: Por que nós não
-                    namoramos?!
+            <div class="col-md-6" id="o">
+                <h4 class="text-left">Orange</h4><br>
+                <h6>26 Capitulos</h6><br>
+                <p>Durante a primavera do seu segundo ano do colegial, Naho recebe uma carta. A remetente é ela mesma, de dez anos no futuro. No começo, Naho encara como uma pegadinha, mas quando os fatos previstos da carta começam a se realizar, um a um, ela percebe que a carta está lhe dizendo o que acontecerá em seu futuro. A carta lhe conta que ela se apaixonará por Kakeru, um estudante recém-transferido... E que ele morrerá aos 17 anos, no inverno. Ao saber do arrependimento e dos desejos da Naho de 26 anos, o que a Naho de 16 anos poderá fazer de diferente?
                 </p>
                 <div class="alert alert-warning configAlert" role="alert">
-                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">13</h6></button> Não recomendado para menores de 13
+                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">12</h6></button> Não recomendado para menores de 12
                 </div>
                 <p>Onde ler: MangáLivre</p>
             </div>
         </div>
+        <hr class="linha">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="romance2.html">2</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="romance2.html" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
     <!-- Fim container mangás-->
 
