--- a/cadastro.html
+++ b/cadastro.html
@@ -37,6 +37,9 @@
             height: 55px;
             width: 85px;
         }
+        .labelConfig{
+            margin-left: 5%;
+        }
     </style>
 </head>
 
@@ -140,7 +143,7 @@
                         <div class="invalid-feedback">Campo obrigatório.</div>
                     </div>
 
-                    <div class="form-floating col-md-3 col-sm-12">
+                    <div class="form-floating  col-md-3 col-sm-12">
                         <select class="form-select form-control" id="floatingSelectEstado" aria-label="Floating label select example">
                             <option selected></option>
                             <option value="1">MG</option>
@@ -148,7 +151,7 @@
                             <option value="3">SP</option>
                             <option value="4">Japão 👍</option>
                         </select>
-                        <label for="floatingSelectEstado">Estado</label>
+                        <label for="floatingSelectEstado" class="labelConfig">Estado</label>
                     </div>
 
                     <div class="col-md-3 col-sm-12 mb-3 form-floating">
