--- a/romance2.html
+++ b/romance2.html
@@ -120,7 +120,9 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark">
                             <li><a class="dropdown-item" href="https://mangalivre.net/" target="_blank">MangaLivre</a>
+                            <li><a class="dropdown-item" href="https://mangaschan.net/" target="_blank">Mangás Chan</a>
                             </li>
+                            <li><a class="dropdown-item" href="https://mangaplus.shueisha.co.jp/updates" target="_blank">Mangá Plus</a>
                         </ul>
                     </li>
                 </ul>
