--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -25,6 +25,10 @@
             color: darkblue;
         }
 
+        .iconesCarousel {
+            color: darkslategray;
+        }
+
         .navButtons:hover {
             background-image: linear-gradient(to bottom, #0783E8, #055EA6);
         }
@@ -51,22 +55,23 @@
             padding-bottom: 1%;
         }
 
-        .txtCarousel{
+        .txtCarousel {
             color: maroon;
             opacity: 1;
         }
 
-        .imgCarousel{
+        .imgCarousel {
             opacity: 0.5;
+            height: 93vh;
         }
 
-        .btnCarousel{
+        .btnCarousel {
             color: gold;
         }
 
-        .carouselNossaEscola{width: 80%;}
-
-
+        .carouselMangaPedia {
+            width: 100%;
+        }
     </style>
 </head>
 
@@ -117,7 +122,8 @@
                             <li><a class="dropdown-item" href="https://mangalivre.net/" target="_blank">MangaLivre</a>
                             <li><a class="dropdown-item" href="https://mangaschan.net/" target="_blank">Mangás Chan</a>
                             </li>
-                            <li><a class="dropdown-item" href="https://mangaplus.shueisha.co.jp/updates" target="_blank">Mangá Plus</a>
+                            <li><a class="dropdown-item" href="https://mangaplus.shueisha.co.jp/updates"
+                                    target="_blank">Mangá Plus</a>
 
                         </ul>
                     </li>
@@ -149,18 +155,20 @@
     <!--Início Carrosel de notícias-->
     <div class="container bg-info-subtle rounded-4 mb-3">
         <div class="row">
-            <div class="col-12">
-                <h1 class="text-center display-2 fs-1 fw-normal">Confira abaixo as últimas novidades do mundo dos
-                    mangás.</h1>
+            <div class="col-12 me-3 my-3">
+                <h1 class="text-center display-2 fs-1 fw-normal text-wrap">
+                    <i class="bi bi-newspaper iconesCarousel"></i>
+                    Confira abaixo as últimas novidades do mundo dos mangás
+                </h1>
             </div>
         </div>
 
         <div class="row">
             <div class="col-12">
-                <div id="carouselNoticias" class="carousel slide carouselNossaEscola " >
+                <div id="carouselNoticias" class="carousel slide carouselMangaPedia">
                     <div class="carousel-indicators ">
-                        <button type="button" data-bs-target="#carouselNoticias" data-bs-slide-to="0" class="active btnCarousel"
-                            aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselNoticias" data-bs-slide-to="0"
+                            class="active btnCarousel" aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselNoticias" data-bs-slide-to="1"
                             aria-label="Slide 2" class="btnCarousel"></button>
                         <button type="button" data-bs-target="#carouselNoticias" data-bs-slide-to="2"
@@ -172,33 +180,42 @@
                     </div>
                     <div class="carousel-inner crPadding">
                         <div class="carousel-item active">
-                            <img src="Imagens/imgCarousel/spoiler.png" class="d-block w-100 " alt="deu erro">
+                            <img src="Imagens/imgCarousel/spoiler.png" class="d-block w-100"
+                                alt="Erro ao carregar a imagem">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2 class="lead"></h2>
+                                <h2 class="display-6 bg-black p-3 rounded-4">Atenção! As imagens a seguir contém
+                                    spoilers de: <p class="lead fw-bold">Jujutsu Kaisen, Chainsaw Man, One Piece e Boku no Hero</p>
+                                </h2>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="Imagens/imgCarousel/gojo.jpg" class="d-block w-100 imgCarousel" alt="deu erro">
+                            <img src="Imagens/imgCarousel/gojo.jpg" class="d-block w-100 imgCarousel"
+                                alt="Erro ao carregar a imagem">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2 class="lead txtCarousel fw-bold" >Morte de Satoru Gojo em Jujutsu Kaisen</h2>
+                                <h2 class="display-6 txtCarousel bg-warning-subtle rounded-5 fw-bold">Morte de Satoru Gojo em
+                                    Jujutsu Kaisen</h2>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="Imagens/imgCarousel/cmParte2.jpg" class="d-block w-100 imgCarousel" alt="deu erro">
+                            <img src="Imagens/imgCarousel/cmParte2.jpg" class="d-block w-100 imgCarousel"
+                                alt="Erro ao carregar a imagem">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2 class="lead txtCarousel fw-bold">Chainsaw Man ganha continuação com outro protagonista</h2>
+                                <h2 class="display-6 txtCarousel bg-warning-subtle rounded-5 fw-bold">Chainsaw Man ganha continuação com outro
+                                    protagonista</h2>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="Imagens/imgCarousel/gear5.jpg" class="d-block w-100 imgCarousel" alt="deu erro">
+                            <img src="Imagens/imgCarousel/gear5.jpg" class="d-block w-100 imgCarousel"
+                                alt="Erro ao carregar a imagem">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2 class="lead fw-bold txtCarousel">Luffy desperta o Gear 5</h2>
+                                <h2 class="display-6 txtCarousel bg-warning-subtle rounded-5 fw-bold">Luffy desperta o Gear 5</h2>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="Imagens/imgCarousel/bakugou.jpg" class="d-block w-100 imgCarousel" alt="deu erro">
+                            <img src="Imagens/imgCarousel/bakugou.jpg" class="d-block w-100 imgCarousel"
+                                alt="Erro ao carregar a imagem">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2 class="lead txtCarousel fw-bold">Bakugou retorna a vida em Boku no Hero</h2>
+                                <h2 class="display-6 txtCarousel bg-warning-subtle rounded-5 fw-bold">Bakugou retorna a vida em Boku no Hero</h2>
                             </div>
                         </div>
                     </div>
