Ajustes na Pagination em acao2.html

--- a/acao2.html
+++ b/acao2.html
@@ -114,7 +114,8 @@
                             <li><a class="dropdown-item" href="https://mangalivre.net/" target="_blank">MangaLivre</a>
                             <li><a class="dropdown-item" href="https://mangaschan.net/" target="_blank">Mangás Chan</a>
                             </li>
-                            <li><a class="dropdown-item" href="https://mangaplus.shueisha.co.jp/updates" target="_blank">Mangá Plus</a>
+                            <li><a class="dropdown-item" href="https://mangaplus.shueisha.co.jp/updates"
+                                    target="_blank">Mangá Plus</a>
                         </ul>
                     </li>
                 </ul>
@@ -370,24 +371,25 @@
             </div>
             <hr class="linha">
         </div>
-        <hr class="linha">
-    </div>
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
-            <li class="page-item">
-                <a class="page-link" href="acao.html" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-            <li class="page-item"><a class="page-link" href="acao.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+
+        <div class="row">
+            <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item">
+                        <a class="page-link" href="acao.html" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="acao.html">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
     <!-- Fim container mangás-->
 
